k8s/auth-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - name: http
      port: 4001
      targetPort: 4001
