k8s/mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
