k8s/product-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: http
      port: 4002
      targetPort: 4002
