k8s/supplier-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supplier-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: supplier-service
  template:
    metadata:
      labels:
        app: supplier-service
    spec:
      containers:
        - name: supplier-service
          image: omr21/supplier-service:latest
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: supplier-service
spec:
  selector:
    app: supplier-service
  ports:
    - protocol: TCP
      port: 4004
      targetPort: 4004
